--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,23 @@
 <h1>Make your form here</h1>
+
+
+<form action="/pirates" method="post">
+  <p>Pirate Name<input type="text" name="pirate[name]"></p>
+  <p>Pirate Weight<input type="text" name="pirate[weight]"></p>
+  <p>Pirate Height<input type="text" name="pirate[height]"></p>
+  <p>First Ship</p>
+  <label for="ship_name_1">Name</label><br>
+  <input id="ship_name_1" type="text" name="pirate[ships][][name]" /><br>
+  <label for="ship_type_1">Type</label><br>
+  <input id="ship_type_1" type="text" name="pirate[ships][][type]" /><br>
+  <label for="ship_booty_1">Booty</label><br>
+  <input id="ship_booty_1" type="text" name="pirate[ships][][booty]" /><br>
+  <p>Second Ship</p>
+  <label for="ship_name_2">Name</label><br>
+  <input id="ship_name_2" type="text" name="pirate[ships][][name]" /><br>
+  <label for="ship_type_2">Type</label><br>
+  <input id="ship_type_2" type="text" name="pirate[ships][][type]" /><br>
+  <label for="ship_booty_2">Booty</label><br>
+  <input id="ship_booty_2" type="text" name="pirate[ships][][booty]" /><br>
+  <input type="submit" name="Submit" value="Submit">
+  </form>
