--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,28 @@
 <h1>Display your Pirate here</h1>
-
+<p> Pirate name: <%= @pirates.name%></p>
+<p> Pirate weight: <%=@pirates.weight%></p>
+<p> Pirate height: <%=@pirates.height%></p>
 
 <h2>Display your first ship here</h2>
-
+<h1>Ship One</h1>
+<% @ships.each.with_index do |ship, index| %>
+  <div class="ship">
+    <% if index == 0 %>
+    <p>Name: <%= ship.name%></p><br>
+    <p>Type: <%= ship.type %></p><br>
+    <p>Booty: <%= ship.booty %></p><br>
+    <% end %>
+  <% end %>
+  </div><br>
 
 <h2>Display your second ship here</h2>
+<h1>Ship Two</h1>
+<% @ships.each.with_index do |ship, index| %>
+  <div class="ship">
+    <% if index == 1 %>
+    <p>Name: <%= ship.name %></p><br>
+    <p>Type: <%= ship.type %></p><br>
+    <p>Booty: <%= ship.booty %></p><br>
+    <% end %>
+  <% end %>
+  </div><br>
